# aspnetcore/tutorials/web-api-help-pages-using-swagger/swaggerSpec/v1/swagger.json
@@ -81,7 +81,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "$ref": "#/components/schemas/Movie"
                 }
               }
             }
@@ -101,7 +101,7 @@
           {
             "name": "id",
             "in": "path",
-            "description": "Movie ID",
+            "description": "Movie Id",
             "required": true,
             "schema": {
               "type": "integer",
@@ -125,7 +125,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "$ref": "#/components/schemas/Movie"
                 }
               }
             }
